--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "daisyui": "^4.12.23",
     "next": "15.1.7",
     "react": "^19.0.0",
