--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "daisyui": "^4.12.23",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "20.17.19",
