--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "proxy": "https://api-penyewaan.aran8276.site"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.3",
