--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "proxy": ""
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.66.3",
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
@@ -17,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^5.3.4"
   },
