--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.4.0",
     "@tanstack/react-query": "^5.66.3",
     "axios": "^1.7.9",
     "daisyui": "^4.12.23",
